Adds location pin to airport even when only APP station is booked

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@
 /desired_bookings.html
 /vatsimBookingMap.html
 /vatsimBookingMap.spec
+/.idea/.gitignore
+/.idea/.name
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/dictionaries/Lorenz.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vatsimBookingMap.iml
+/.idea/vcs.xml
